--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0",
-        "laravel/framework": "^10.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "laravel/framework": "^10.0|^11.0|^12.0",
         "livewire/livewire": "^3.0"
     },
     "require-dev": {
